[package]
name = "ldtk-rs"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_tuple = "0.5.0"
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap" }
