[package]
name = "bevy-ldtk"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2018"

[workspace]
members = ["crates/*"]

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
ldtk-rs = { path = "crates/ldtk-rs" }

[[example]]
name = "example"
path = "examples/example.rs"
