[package]
name = "bevy-ldtk-plugin"
version = "0.1.0"
authors = ["tigregalis <anak.harimau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_tilemap = { git = "https://github.com/joshuajbouw/bevy_tilemap" }
